zetasql/parser/testdata/order_by_collate.test
select * from T
order by col COLLATE {{"en_US"|@en_US}} ASC
--
ALTERNATION GROUP: "en_US"
--
QueryStatement [0-48] [select * from...en_US" ASC]
  Query [0-48] [select * from...en_US" ASC]
    Select [0-15] [select * from T]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-15] [from T]
        TablePathExpression [14-15] [T]
          PathExpression [14-15] [T]
            Identifier(T) [14-15] [T]
    OrderBy [16-48] [order by col...en_US" ASC]
      OrderingExpression(ASC EXPLICITLY) [25-48] [col COLLATE "en_US" ASC]
        PathExpression [25-28] [col]
          Identifier(col) [25-28] [col]
        Collate [29-44] [COLLATE "en_US"]
          StringLiteral("en_US") [37-44] ["en_US"]
--
SELECT
  *
FROM
  T
ORDER BY col COLLATE "en_US" ASC
--
ALTERNATION GROUP: @en_US
--
QueryStatement [0-47] [select * from...@en_US ASC]
  Query [0-47] [select * from...@en_US ASC]
    Select [0-15] [select * from T]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-15] [from T]
        TablePathExpression [14-15] [T]
          PathExpression [14-15] [T]
            Identifier(T) [14-15] [T]
    OrderBy [16-47] [order by col...@en_US ASC]
      OrderingExpression(ASC EXPLICITLY) [25-47] [col COLLATE @en_US ASC]
        PathExpression [25-28] [col]
          Identifier(col) [25-28] [col]
        Collate [29-43] [COLLATE @en_US]
          ParameterExpr [37-43] [@en_US]
            Identifier(en_US) [38-43] [en_US]
--
SELECT
  *
FROM
  T
ORDER BY col COLLATE @en_US ASC
==

select * from T
order by col1 ASC,
         col2 COLLATE "c2" DESC,
         3 DESC,
         4 COLLATE @c4 ASC
--
QueryStatement [0-111] [select * from...OLLATE @c4 ASC]
  Query [0-111] [select * from...OLLATE @c4 ASC]
    Select [0-15] [select * from T]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-15] [from T]
        TablePathExpression [14-15] [T]
          PathExpression [14-15] [T]
            Identifier(T) [14-15] [T]
    OrderBy [16-111] [order by col1...OLLATE @c4 ASC]
      OrderingExpression(ASC EXPLICITLY) [25-33] [col1 ASC]
        PathExpression [25-29] [col1]
          Identifier(col1) [25-29] [col1]
      OrderingExpression(DESC) [44-66] [col2 COLLATE "c2" DESC]
        PathExpression [44-48] [col2]
          Identifier(col2) [44-48] [col2]
        Collate [49-61] [COLLATE "c2"]
          StringLiteral("c2") [57-61] ["c2"]
      OrderingExpression(DESC) [77-83] [3 DESC]
        IntLiteral(3) [77-78] [3]
      OrderingExpression(ASC EXPLICITLY) [94-111] [4 COLLATE @c4 ASC]
        IntLiteral(4) [94-95] [4]
        Collate [96-107] [COLLATE @c4]
          ParameterExpr [104-107] [@c4]
            Identifier(c4) [105-107] [c4]
--
SELECT
  *
FROM
  T
ORDER BY col1 ASC, col2 COLLATE "c2" DESC, 3 DESC, 4 COLLATE @c4 ASC
==

select f() over (ORDER BY a COLLATE "en") from T
--
QueryStatement [0-48] [select f()...en") from T]
  Query [0-48] [select f()...en") from T]
    Select [0-48] [select f()...en") from T]
      SelectList [7-41] [f() over (...COLLATE "en")]
        SelectColumn [7-41] [f() over (...COLLATE "en")]
          AnalyticFunctionCall [7-41] [f() over (...COLLATE "en")]
            FunctionCall [7-10] [f()]
              PathExpression [7-8] [f]
                Identifier(f) [7-8] [f]
            WindowSpecification [16-41] [(ORDER BY a COLLATE "en")]
              OrderBy [17-40] [ORDER BY a COLLATE "en"]
                OrderingExpression(ASC) [26-40] [a COLLATE "en"]
                  PathExpression [26-27] [a]
                    Identifier(a) [26-27] [a]
                  Collate [28-40] [COLLATE "en"]
                    StringLiteral("en") [36-40] ["en"]
      FromClause [42-48] [from T]
        TablePathExpression [47-48] [T]
          PathExpression [47-48] [T]
            Identifier(T) [47-48] [T]
--
SELECT
  f() OVER (
    ORDER BY a COLLATE "en")
FROM
  T
==

select f() over(partition by a COLLATE "en") from T
--
ERROR: Syntax error: Expected ")" but got keyword COLLATE [at 1:32]
select f() over(partition by a COLLATE "en") from T
                               ^
==

select f() over(partition by a order by a COLLATE "en") from T
--
QueryStatement [0-62] [select f()...en") from T]
  Query [0-62] [select f()...en") from T]
    Select [0-62] [select f()...en") from T]
      SelectList [7-55] [f() over(partitio...LATE "en")]
        SelectColumn [7-55] [f() over(partitio...LATE "en")]
          AnalyticFunctionCall [7-55] [f() over(partitio...LATE "en")]
            FunctionCall [7-10] [f()]
              PathExpression [7-8] [f]
                Identifier(f) [7-8] [f]
            WindowSpecification [15-55] [(partition...COLLATE "en")]
              PartitionBy [16-30] [partition by a]
                PathExpression [29-30] [a]
                  Identifier(a) [29-30] [a]
              OrderBy [31-54] [order by a COLLATE "en"]
                OrderingExpression(ASC) [40-54] [a COLLATE "en"]
                  PathExpression [40-41] [a]
                    Identifier(a) [40-41] [a]
                  Collate [42-54] [COLLATE "en"]
                    StringLiteral("en") [50-54] ["en"]
      FromClause [56-62] [from T]
        TablePathExpression [61-62] [T]
          PathExpression [61-62] [T]
            Identifier(T) [61-62] [T]
--
SELECT
  f() OVER (PARTITION BY a
    ORDER BY a COLLATE "en")
FROM
  T
==

select f() over (order by a COLLATE "ca" ASC,
                          b COLLATE "cb" DESC,
                          3 COLLATE @c3 ASC,
                          4 COLLATE @c4 DESC)
--
QueryStatement [0-183] [select f()...@c4 DESC)]
  Query [0-183] [select f()...@c4 DESC)]
    Select [0-183] [select f()...@c4 DESC)]
      SelectList [7-183] [f() over (...@c4 DESC)]
        SelectColumn [7-183] [f() over (...@c4 DESC)]
          AnalyticFunctionCall [7-183] [f() over (...@c4 DESC)]
            FunctionCall [7-10] [f()]
              PathExpression [7-8] [f]
                Identifier(f) [7-8] [f]
            WindowSpecification [16-183] [(order by...@c4 DESC)]
              OrderBy [17-182] [order by a...COLLATE @c4 DESC]
                OrderingExpression(ASC EXPLICITLY) [26-44] [a COLLATE "ca" ASC]
                  PathExpression [26-27] [a]
                    Identifier(a) [26-27] [a]
                  Collate [28-40] [COLLATE "ca"]
                    StringLiteral("ca") [36-40] ["ca"]
                OrderingExpression(DESC) [72-91] [b COLLATE "cb" DESC]
                  PathExpression [72-73] [b]
                    Identifier(b) [72-73] [b]
                  Collate [74-86] [COLLATE "cb"]
                    StringLiteral("cb") [82-86] ["cb"]
                OrderingExpression(ASC EXPLICITLY) [119-136] [3 COLLATE @c3 ASC]
                  IntLiteral(3) [119-120] [3]
                  Collate [121-132] [COLLATE @c3]
                    ParameterExpr [129-132] [@c3]
                      Identifier(c3) [130-132] [c3]
                OrderingExpression(DESC) [164-182] [4 COLLATE @c4 DESC]
                  IntLiteral(4) [164-165] [4]
                  Collate [166-177] [COLLATE @c4]
                    ParameterExpr [174-177] [@c4]
                      Identifier(c4) [175-177] [c4]
--
SELECT
  f() OVER (
    ORDER BY a COLLATE "ca" ASC, b COLLATE "cb" DESC, 3 COLLATE @c3 ASC, 4 COLLATE @c4 DESC)
==

select * from T
order by 1 COLLATE {{""|NULL|"NULL"}}
--
ALTERNATION GROUP: ""
--
QueryStatement [0-37] [select * from...COLLATE ""]
  Query [0-37] [select * from...COLLATE ""]
    Select [0-15] [select * from T]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-15] [from T]
        TablePathExpression [14-15] [T]
          PathExpression [14-15] [T]
            Identifier(T) [14-15] [T]
    OrderBy [16-37] [order by 1 COLLATE ""]
      OrderingExpression(ASC) [25-37] [1 COLLATE ""]
        IntLiteral(1) [25-26] [1]
        Collate [27-37] [COLLATE ""]
          StringLiteral("") [35-37] [""]
--
SELECT
  *
FROM
  T
ORDER BY 1 COLLATE ""
--
ALTERNATION GROUP: NULL
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got keyword NULL [at 2:20]
order by 1 COLLATE NULL
                   ^
--
ALTERNATION GROUP: "NULL"
--
QueryStatement [0-41] [select * from...COLLATE "NULL"]
  Query [0-41] [select * from...COLLATE "NULL"]
    Select [0-15] [select * from T]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-15] [from T]
        TablePathExpression [14-15] [T]
          PathExpression [14-15] [T]
            Identifier(T) [14-15] [T]
    OrderBy [16-41] [order by 1 COLLATE "NULL"]
      OrderingExpression(ASC) [25-41] [1 COLLATE "NULL"]
        IntLiteral(1) [25-26] [1]
        Collate [27-41] [COLLATE "NULL"]
          StringLiteral("NULL") [35-41] ["NULL"]
--
SELECT
  *
FROM
  T
ORDER BY 1 COLLATE "NULL"
==

select a, b from T
order by c COLLATE d
--
ERROR: Syntax error: Expected "@" or "@@" or string literal but got identifier "d" [at 2:20]
order by c COLLATE d
                   ^
==

select * from T
order by col ASC COLLATE "en_US"
--
ERROR: Syntax error: Expected end of input but got keyword COLLATE [at 2:18]
order by col ASC COLLATE "en_US"
                 ^
==

select * from T
order by COLLATE "en_US" col
--
ERROR: Syntax error: Expected "(" but got string literal "en_US" [at 2:18]
order by COLLATE "en_US" col
                 ^
==

# -------------------------------------------
# COLLATE is only supported in ORDER BY clause.
# -------------------------------------------

select * from T COLLATE "en_US"
--
ERROR: Syntax error: Expected end of input but got keyword COLLATE [at 1:17]
select * from T COLLATE "en_US"
                ^
==

select col COLLATE "en_US" from T
--
ERROR: Syntax error: Expected end of input but got keyword COLLATE [at 1:12]
select col COLLATE "en_US" from T
           ^
==

select col from T
GROUP BY col COLLATE "en_US"
--
ERROR: Syntax error: Expected end of input but got keyword COLLATE [at 2:14]
GROUP BY col COLLATE "en_US"
             ^
==

select MAX(col COLLATE "en_US") from T
--
ERROR: Syntax error: Expected ")" but got keyword COLLATE [at 1:16]
select MAX(col COLLATE "en_US") from T
               ^
==

select DISTINCT col COLLATE "en_US" from T
--
ERROR: Syntax error: Expected end of input but got keyword COLLATE [at 1:21]
select DISTINCT col COLLATE "en_US" from T
                    ^
==

select * from T
WHERE expr1 COLLATE "en_US" = expr2 COLLATE "ar_EG"
--
ERROR: Syntax error: Expected end of input but got keyword COLLATE [at 2:13]
WHERE expr1 COLLATE "en_US" = expr2 COLLATE "ar_EG"
            ^
==

# This query will fail in analyzer.
select * from T
WHERE STRCMP(expr1, expr2, "en_US")=0
--
QueryStatement [0-53] [select * from..."en_US")=0]
  Query [0-53] [select * from..."en_US")=0]
    Select [0-53] [select * from..."en_US")=0]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-15] [from T]
        TablePathExpression [14-15] [T]
          PathExpression [14-15] [T]
            Identifier(T) [14-15] [T]
      WhereClause [16-53] [WHERE STRCMP..."en_US")=0]
        BinaryExpression(=) [22-53] [STRCMP(expr1..."en_US")=0]
          FunctionCall [22-51] [STRCMP(expr1, expr2, "en_US")]
            PathExpression [22-28] [STRCMP]
              Identifier(STRCMP) [22-28] [STRCMP]
            PathExpression [29-34] [expr1]
              Identifier(expr1) [29-34] [expr1]
            PathExpression [36-41] [expr2]
              Identifier(expr2) [36-41] [expr2]
            StringLiteral("en_US") [43-50] ["en_US"]
          IntLiteral(0) [52-53] [0]
--
SELECT
  *
FROM
  T
WHERE
  STRCMP(expr1, expr2, "en_US") = 0
==

# This query will fail in analyzer.
select * from T
WHERE LOCATE(str1, str2, "en_US")!=0
--
QueryStatement [0-52] [select * from...en_US")!=0]
  Query [0-52] [select * from...en_US")!=0]
    Select [0-52] [select * from...en_US")!=0]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-15] [from T]
        TablePathExpression [14-15] [T]
          PathExpression [14-15] [T]
            Identifier(T) [14-15] [T]
      WhereClause [16-52] [WHERE LOCATE...en_US")!=0]
        BinaryExpression(!=) [22-52] [LOCATE(str1, str2, "en_US")!=0]
          FunctionCall [22-49] [LOCATE(str1, str2, "en_US")]
            PathExpression [22-28] [LOCATE]
              Identifier(LOCATE) [22-28] [LOCATE]
            PathExpression [29-33] [str1]
              Identifier(str1) [29-33] [str1]
            PathExpression [35-39] [str2]
              Identifier(str2) [35-39] [str2]
            StringLiteral("en_US") [41-48] ["en_US"]
          IntLiteral(0) [51-52] [0]
--
SELECT
  *
FROM
  T
WHERE
  LOCATE(str1, str2, "en_US") != 0
==

select * from T
WHERE col COLLATE "en_US" LIKE expr
--
ERROR: Syntax error: Expected end of input but got keyword COLLATE [at 2:11]
WHERE col COLLATE "en_US" LIKE expr
          ^
